search results: correctly wrap song results, added more spacing after "XYZ not found" messages
git-svn-id: file:///srv/svn/myousica/myousica/trunk@549 1758279c-6b0d-4dd2-8212-40bfc25400ca

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3059,6 +3059,11 @@ div.popup {
 	padding: 0 12px;
 }
 
+/* "user not found" messages */
+#search_results p.grey-text {
+	padding-bottom: 20px;
+}
+
 .search_title {
 	color:#004D71;
 	font-size:16px;
